Renaming display field to metaDataDisplay, order to displayOrder in credential configuration
Signed-off-by: jackjain <jackjain1995@gmail.com>